# vkQuake2

./: .gitignore  CMakeLists.txt  README.rst  cmake.mingw64.sh
docs/: annotated.html  annotated_dup.js  classes.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741.js  dir_0eb7d0dc3961053098093884fffa86c8.html  dir_0eb7d0dc3961053098093884fffa86c8.js  dir_1699be727a800b1d059c6f7f2b91d2ee.html  dir_1699be727a800b1d059c6f7f2b91d2ee.js  dir_175ff204de3db36f06a5842625e7d027.html  dir_175ff204de3db36f06a5842625e7d027.js  dir_2d0318648fbd8ab13b1a0a218eb120fd.html  dir_2d0318648fbd8ab13b1a0a218eb120fd.js  dir_37c6514aeece95293041e34c0f2e0784.html  dir_37c6514aeece95293041e34c0f2e0784.js  dir_41e1742e44e2de38b3bc91f993fed282.html  dir_41e1742e44e2de38b3bc91f993fed282.js  dir_5402709f8bdc3d741d351710dfb9b8e6.html  dir_5402709f8bdc3d741d351710dfb9b8e6.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab.js  dir_766b1a23d4917d6ebadb35b76b8738e1.html  dir_766b1a23d4917d6ebadb35b76b8738e1.js  dir_7ac37f85a25996ede17b851e01857bc5.html  dir_7ac37f85a25996ede17b851e01857bc5.js  dir_7dc28ed10c1e0aa99689948e6211576b.html  dir_7dc28ed10c1e0aa99689948e6211576b.js  dir_814294f75385a362ae11c0affd997de7.html  dir_814294f75385a362ae11c0affd997de7.js  dir_936b32d915b25197ece91b58f29c3e30.html  dir_936b32d915b25197ece91b58f29c3e30.js  dir_a0c69143b39b8cf4ccaecc206ce912ca.html  dir_a0c69143b39b8cf4ccaecc206ce912ca.js  dir_a8343cc03eb31b5a0ad4f19eb7275884.html  dir_a8343cc03eb31b5a0ad4f19eb7275884.js  dir_aadd7608786eac02008073d782669acb.html  dir_aadd7608786eac02008073d782669acb.js  dir_afd2f64ae35ff80263387f1d465e467a.html  (+301 more)
docs/d0/d00/: structportable__samplepair__t.html  structportable__samplepair__t.js
docs/d0/d01/: structdrwav__smpl.html  structdrwav__smpl.js
docs/d0/d03/: game_2g__utils_8c.html  game_2g__utils_8c.js  game_2g__utils_8c_source.html
docs/d0/d0d/: structswstate__s-members.html
docs/d0/d17/: structstb__vorbis.html  structstb__vorbis.js
docs/d0/d1b/: sv__world_8c.html  sv__world_8c.js  sv__world_8c_source.html
docs/d0/d1c/: structqvktexture__t.html  structqvktexture__t.js
docs/d0/d2e/: structpack__s-members.html
docs/d0/d31/: m__actor_8h.html  m__actor_8h.js  m__actor_8h_source.html
docs/d0/d33/: structemitpoint__t.html  structemitpoint__t.js
docs/d0/d39/: vk__common_8c.html  vk__common_8c.js  vk__common_8c_source.html
docs/d0/d3c/: structdedge__t.html  structdedge__t.js
docs/d0/d40/: game_2p__hud_8c.html  game_2p__hud_8c.js  game_2p__hud_8c_source.html
docs/d0/d42/: ctf_2g__trigger_8c.html  ctf_2g__trigger_8c.js  ctf_2g__trigger_8c_source.html
docs/d0/d49/: structclientinfo__t.html  structclientinfo__t.js
docs/d0/d56/: console_8c.html  console_8c.js  console_8c_source.html
docs/d0/d63/: vk__image_8c.html  vk__image_8c.js  vk__image_8c_source.html
docs/d0/d66/: struct_vma_pool_stats.html  struct_vma_pool_stats.js
docs/d0/d69/: structdsprite__t-members.html
docs/d0/d6a/: structma__mutex-members.html
docs/d0/d6c/: structcvar__s-members.html
docs/d0/d6f/: game_2g__weapon_8c.html  game_2g__weapon_8c.js  game_2g__weapon_8c_source.html  structcblock__t.html  structcblock__t.js
docs/d0/d76/: structglpoly__s-members.html
docs/d0/d77/: game_2g__misc_8c.html  game_2g__misc_8c.js  game_2g__misc_8c_source.html
docs/d0/d7f/: structchallenge__t-members.html
docs/d0/d81/: structdrwav__data__format-members.html
docs/d0/d84/: structoldrefdef__t-members.html
docs/d0/d86/: m__supertank_8h.html  m__supertank_8h.js  m__supertank_8h_source.html  structdrmp3dec.html  structdrmp3dec.js
docs/d0/d8a/: structloopmsg__t.html  structloopmsg__t.js
docs/d0/d8d/: structmenulayer__t.html  structmenulayer__t.js
docs/d0/d94/: structdrmp3dec__frame__info-members.html
docs/d0/d9e/: g__monster_8c.html  g__monster_8c.js  g__monster_8c_source.html
docs/d0/d9f/: struct_mode.html  struct_mode.js
docs/d0/da1/: struct_floor0-members.html
docs/d0/da6/: structglconfig__t.html  structglconfig__t.js
docs/d0/dac/: game_2p__view_8c.html  game_2p__view_8c.js  game_2p__view_8c_source.html  structmapsurface__s.html  structmapsurface__s.js
docs/d0/dad/: structghost__s-members.html
docs/d0/daf/: ctf_2g__utils_8c.html  ctf_2g__utils_8c.js  ctf_2g__utils_8c_source.html  structbedge__s-members.html
docs/d0/db3/: struct_vma_defragmentation_info.html  struct_vma_defragmentation_info.js
docs/d0/db6/: structparticle__t.html  structparticle__t.js
docs/d0/dc3/: structedict__s-members.html
docs/d0/dcd/: vk__model_8h.html  vk__model_8h.js  vk__model_8h_source.html
docs/d0/dd1/: structstb__vorbis-members.html
docs/d0/dd2/: structdirty__t-members.html
docs/d0/dda/: structdlight__t.html  structdlight__t.js
docs/d0/ddb/: structma__pcm__rb.html  structma__pcm__rb.js
docs/d0/ddf/: structmenuaction__s-members.html
docs/d0/de2/: cl__newfx_8c.html  cl__newfx_8c.js  cl__newfx_8c_source.html
docs/d0/de3/: console_8h.html  console_8h.js  console_8h_source.html
docs/d0/df3/: structsearchpath__s-members.html
docs/d0/dfc/: structgltmode__t.html  structgltmode__t.js
docs/d1/d03/: polygon__lmap__frag_8c.html  (+2 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_2.js  classes_3.js  (+173 more)
doxygen/: Doxyfile
game/: CMakeLists.txt
ref_gl/: gl_local.h
ref_vk/: CMakeLists.txt
rogue/: CMakeLists.txt
src/: CMakeLists.txt
src/client/: snd_loc.h
src/ctf/: CMakeLists.txt
src/ref_gl/: CMakeLists.txt
src/ref_soft/: CMakeLists.txt
src/zaero/: CMakeLists.txt
win32/: sys_win.c
xatrix/: CMakeLists.txt
(+1685 files in other folders)
